                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 08-07-2005 changed: simplified the way adding codecs to paplayer
 - 08-07-2005 fixed: my pictures, crash in background thumb loader if a directory contains zip/rar files
 - 08-07-2005 fixed: Scrolling of info labels wasn't working 100%.
 - 08-07-2005 added: Reading of disk number to the tag readers.  Sorting now sorts by disk then track number.  Only track number is displayed.
 - 08-07-2005 added: XBOX v1.6 CPU & GPU Temp will now detect closer Temp and the Automatic Fanspeed should also work on v1.6 better! This changes has only effect for Detected Xbox v1.6!! [GeminiServer]
 - 08-07-2005 added: SystemInfo XBMC IP Adress to Default View [GeminiServer]
 - 08-07-2005 changed: XBOX Autodetection interval was < 1sec. now set the default to 30 sec. interval and it is via Settings Changeable. Settings - Network - Autodetection - PingInterval in Sec. [GeminIServer]
 - 08-07-2005 fixed: FTP Client: listing & copying files and folders from a target ftp server with virtual home dirs [GeminiServer]
 - 07-07-2005 fixed: slashes in tags (ie, AC/DC) should no longer cause problems in the Music Library
 - 07-07-2005 added: workaround for music streaming.  until a real http filereader class is available, mplayer will be used for streams
 - 07-07-2005 changed: music info scanner does not preload dlls anymore
 - 07-07-2005 changed: if id3v2 tag it present and contains no data, the id3v1 tag is loaded
 - 07-07-2005 fixed: exception while scanning files with utf encoded id3 tags